[package]
name = "rust-beecrowd"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Maia <gabrielmaialva33@gmail.com>"]

[dependencies]


[[bin]]
name = "beecrowd_1000"
path = "./src/beecrowd_1000.rs"

[[bin]]
name = "beecrowd_1001"
path = "./src/beecrowd_1001.rs"

[[bin]]
name = "beecrowd_1002"
path = "./src/beecrowd_1002.rs"

[[bin]]
name = "beecrowd_1003"
path = "./src/beecrowd_1003.rs"

[[bin]]
name = "beecrowd_1004"
path = "./src/beecrowd_1004.rs"

[[bin]]
name = "beecrowd_1005"
path = "./src/beecrowd_1005.rs"

[[bin]]
name = "beecrowd_1006"
path = "./src/beecrowd_1006.rs"

[[bin]]
name = "beecrowd_1007"
path = "./src/beecrowd_1007.rs"

[[bin]]
name = "beecrowd_1008"
path = "./src/beecrowd_1008.rs"

[[bin]]
name = "beecrowd_1009"
path = "./src/beecrowd_1009.rs"

[[bin]]
name = "beecrowd_1010"
path = "./src/beecrowd_1010.rs"