[package]
name = "rust-beecrowd"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Maia <gabrielmaialva33@gmail.com>"]

[dependencies]


[[bin]]
name = "beecrowd_1000"
path = "./src/beecrowd_1000.rs"

[[bin]]
name = "beecrowd_1001"
path = "./src/beecrowd_1001.rs"

[[bin]]
name = "beecrowd_1002"
path = "./src/beecrowd_1002.rs"

[[bin]]
name = "beecrowd_1003"
path = "./src/beecrowd_1003.rs"

[[bin]]
name = "beecrowd_1004"
path = "./src/beecrowd_1004.rs"

[[bin]]
name = "beecrowd_1005"
path = "./src/beecrowd_1005.rs"

[[bin]]
name = "beecrowd_1006"
path = "./src/beecrowd_1006.rs"

[[bin]]
name = "beecrowd_1007"
path = "./src/beecrowd_1007.rs"

[[bin]]
name = "beecrowd_1008"
path = "./src/beecrowd_1008.rs"

[[bin]]
name = "beecrowd_1009"
path = "./src/beecrowd_1009.rs"

[[bin]]
name = "beecrowd_1010"
path = "./src/beecrowd_1010.rs"

[[bin]]
name = "beecrowd_1011"
path = "./src/beecrowd_1011.rs"

[[bin]]
name = "beecrowd_1012"
path = "./src/beecrowd_1012.rs"

[[bin]]
name = "beecrowd_1013"
path = "./src/beecrowd_1013.rs"

[[bin]]
name = "beecrowd_1014"
path = "./src/beecrowd_1014.rs"

[[bin]]
name = "beecrowd_1015"
path = "./src/beecrowd_1015.rs"

[[bin]]
name = "beecrowd_1016"
path = "./src/beecrowd_1016.rs"

[[bin]]
name = "beecrowd_1017"
path = "./src/beecrowd_1017.rs"

[[bin]]
name = "beecrowd_1018"
path = "./src/beecrowd_1018.rs"

[[bin]]
name = "beecrowd_1019"
path = "./src/beecrowd_1019.rs"

[[bin]]
name = "beecrowd_1020"
path = "./src/beecrowd_1020.rs"

[[bin]]
name = "beecrowd_1021"
path = "./src/beecrowd_1021.rs"

[[bin]]
name = "beecrowd_1035"
path = "src/beecrowd_1035.rs"

[[bin]]
name = "beecrowd_1036"
path = "src/beecrowd_1036.rs"

[[bin]]
name = "beecrowd_1037"
path = "src/beecrowd_1037.rs"

[[bin]]
name = "beecrowd_1038"
path = "src/beecrowd_1038.rs"

[[bin]]
name = "beecrowd_1040"
path = "src/beecrowd_1040.rs"

[[bin]]
name = "beecrowd_1041"
path = "src/beecrowd_1041.rs"

[[bin]]
name = "beecrowd_1042"
path = "src/beecrowd_1042.rs"

[[bin]]
name = "beecrowd_1043"
path = "src/beecrowd_1043.rs"

[[bin]]
name = "beecrowd_1044"
path = "src/beecrowd_1044.rs"

[[bin]]
name = "beecrowd_1045"
path = "src/beecrowd_1045.rs"

[[bin]]
name = "beecrowd_1046"
path = "src/beecrowd_1046.rs"

[[bin]]
name = "beecrowd_1047"
path = "src/beecrowd_1047.rs"